test: 테스트 실해 해결
currentPrice 참조과정에서 액세스 토큰 발급이 실패되어 무한 루프에 빠짐